fix white space

--- a/src/components/styles/MainDashboard.scss
+++ b/src/components/styles/MainDashboard.scss
@@ -1,6 +1,6 @@
 .Main-Dashboard{
     background-color: var(--color-primary-dark);
-    height: 100vh;
+    height: 100%;
 
     @media only screen and (min-width: 768px) {
         width: 33%;
