--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,8 @@
     .App {
         @media only screen and (min-width: 768px) {
             display: flex;
-            height: 100vh;
+            height: 100%;
+            background-color: var(--color-primary-dark);
         }
     }
 }
